// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> should adopt children 1`] = `
<header>
  <SpeechBubble
    arrowHeight="4vh"
    arrowPosition="bottom-right"
    backgroundColor="#465a65"
    isGhost={false}
    padding="1.5rem"
    showArrowBreakpoint="750px"
  >
    Child
  </SpeechBubble>
</header>
`;

exports[`<Header /> should render and match the snapshot 1`] = `
<header>
  <SpeechBubble
    arrowHeight="4vh"
    arrowPosition="bottom-right"
    backgroundColor="#465a65"
    isGhost={false}
    padding="1.5rem"
    showArrowBreakpoint="750px"
  />
</header>
`;
